--- a/client/src/app/categories-page/categories-page.component.html
+++ b/client/src/app/categories-page/categories-page.component.html
@@ -8,19 +8,22 @@
   </button>
 </div>
 
-<div class="row" *ngIf="!isLoading; else loading">
+<div class="row" *ngIf="categories$ | async as categories; else loader">
   <div class="col s12">
-    <div class="collection">
+    <div class="collection" *ngIf="categories.length !== 0; else empty">
       <a
         *ngFor="let category of categories"
-        href="#!"
+        routerLink="['/categories', category._id]"
         class="collection-item"
         >{{ category.name }}</a
       >
     </div>
   </div>
+  <ng-template #empty>
+    <div class="center">У вас нет ни одной категории</div>
+  </ng-template>
 </div>
 
-<ng-template #loading>
+<ng-template #loader>
   <app-loader></app-loader>
 </ng-template>
