--- a/client/src/app/categories-page/categories-page.component.html
+++ b/client/src/app/categories-page/categories-page.component.html
@@ -13,7 +13,7 @@
     <div class="collection" *ngIf="categories.length !== 0; else empty">
       <a
         *ngFor="let category of categories"
-        routerLink="['/categories', category._id]"
+        [routerLink]="['/categories', category._id]"
         class="collection-item"
         >{{ category.name }}</a
       >
